Se tradujeron los comentarios en el archivo index.html del español al inglés, mejorando la claridad y accesibilidad del código. Esto incluye secciones como metadatos, navegación, contenido principal y pie de página.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Metadatos básicos y configuración del documento -->
+    <!-- Basic metadata and document configuration -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Metadatos SEO y descripción del sitio -->
+    <!-- SEO metadata and site description -->
     <meta
       name="description"
       content="Professional frontend developer portfolio showcasing web development projects, work experience, and educational background. Specializing in HTML, CSS, and JavaScript."
@@ -40,7 +40,7 @@
       content="Professional frontend developer portfolio showcasing web development projects and experience."
     />
 
-    <!-- Título y recursos externos -->
+    <!-- Title and external resources -->
     <title>Generic Portfolio | Frontend Developer</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="assets/icons/logo.svg" type="image/svg+xml" />
@@ -48,7 +48,7 @@
     <link rel="preconnect" href="https://github.com" />
   </head>
   <body class="container">
-    <!-- Encabezado con navegación principal -->
+    <!-- Header with main navigation -->
     <header>
       <nav aria-label="Main navigation">
         <a href="index.html" class="logo-link">
@@ -69,7 +69,7 @@
     </header>
 
     <main>
-      <!-- Sección Hero - Presentación principal -->
+      <!-- Hero Section - Main presentation -->
       <section class="hero" aria-labelledby="hero-title">
         <h1 id="hero-title">Frontend Developer</h1>
         <h2>
@@ -77,9 +77,9 @@
         </h2>
       </section>
 
-      <!-- Contenido principal dividido en tres columnas -->
+      <!-- Main content divided into three columns -->
       <section class="content">
-        <!-- Columna 1: Lista de proyectos -->
+        <!-- Column 1: Projects list -->
         <section class="projects-col">
           <h2 id="projects-title">Projects</h2>
           <ul class="projects-list">
@@ -90,7 +90,7 @@
           </ul>
         </section>
 
-        <!-- Columna 2: Experiencia laboral y trabajo open source -->
+        <!-- Column 2: Work experience and open source work -->
         <section class="center-col">
           <div class="experience-item">
             <h2 id="experience-title">Work Experience</h2>
@@ -112,7 +112,7 @@
           </div>
         </section>
 
-        <!-- Columna 3: Educación y cursos -->
+        <!-- Column 3: Education and courses -->
         <section class="education">
           <h2 id="education-title">Education</h2>
           <p>
@@ -134,7 +134,7 @@
         </section>
       </section>
 
-      <!-- Sección de testimonios -->
+      <!-- Testimonials section -->
       <section class="testimonials" aria-labelledby="testimonials-title">
         <h2 id="testimonials-title">Reviews from my teachers</h2>
         <ol class="testimonials-list">
@@ -166,7 +166,7 @@
       </section>
     </main>
 
-    <!-- Pie de página -->
+    <!-- Footer -->
     <footer>
       <p>Made only for practice.</p>
     </footer>
